c2prj1_cards/grade.txt
Grading at Mon Jun 22 17:47:42 UTC 2020
Compiling cards.c
cards.c: In function ‘value_letter’:
cards.c:36:6: error: ‘value_let’ undeclared (first use in this function)
   if(value_let>=48&&value_let<=57)
      ^
cards.c:36:6: note: each undeclared identifier is reported only once for each function it appears in
cards.c:40:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
